# djangocms-ranked-search

./: MANIFEST.in  README.md  pyproject.toml
djangocms_ranked_search/: __init__.py  apps.py  cms_apps.py  forms.py  search_indexes.py  urls.py  utils.py  views.py  whoosh_backend.py  xapian_backend.py
